<resources>
    <string name="app_name">wantedtest</string>
    <string name="search_books">Search Books</string>
    <string name="result">Results</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_details">Book Details</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="subtitle">SubTitle</string>
    <string name="authors">Authors</string>
    <string name="published_date">Published Date</string>
    <string name="detail_fragment">detailFragment</string>
    <string name="search_book_icon">Search Book Icon</string>
    <string name="back_button">Back Button</string>
    <string name="book_image">Book Image</string>
    <string name="detail_pages">Detail Pages</string>
</resources>