<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutSS1"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutSS1"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bookDetailHeaderCL"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.9">

            <TextView
                android:id="@+id/bookDetailHeaderTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_details"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/bookDetailBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                app:tint="#000000"
                android:contentDescription="@string/back_button"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/bookDetailMainCL"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bookDetailHeaderCL">

            <androidx.core.widget.NestedScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fillViewport="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.9">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bookDetailTitle"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/title"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textColor="@color/black"
                        >

                    </TextView>


                    <TextView
                        android:layout_width="0dp"
                        app:layout_constraintWidth_percent="0.8"
                        android:layout_height="wrap_content"
                        android:id="@+id/bookDetailTitleTV"
                        android:textSize="13sp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textColor="@color/black"
                        android:gravity="end"
                        >

                    </TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bookDetailSubtitle"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/subtitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bookDetailTitle"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"
                        >
                    </TextView>


                    <TextView
                        android:layout_width="0dp"
                        app:layout_constraintWidth_percent="0.8"
                        android:layout_height="wrap_content"
                        android:id="@+id/bookDetailSubtitleTV"
                        android:textSize="13sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bookDetailTitle"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"
                        android:gravity="end"
                        >

                    </TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bookDetailAuthors"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/authors"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bookDetailSubtitle"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"
                        >
                    </TextView>


                    <TextView
                        android:layout_width="0dp"
                        app:layout_constraintWidth_percent="0.8"
                        android:layout_height="wrap_content"
                        android:id="@+id/bookDetailAuthorsTV"
                        android:textSize="13sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bookDetailSubtitle"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"
                        android:gravity="end"
                        >

                    </TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bookDetailPublishedDate"
                        android:textSize="16sp"
                        android:text="@string/published_date"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bookDetailAuthors"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"
                        >
                    </TextView>


                    <TextView
                        android:layout_width="0dp"
                        app:layout_constraintWidth_percent="0.6"
                        android:layout_height="wrap_content"
                        android:id="@+id/bookDetailPublishedDateTV"
                        android:textSize="13sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bookDetailAuthorsTV"
                        android:textColor="@color/black"
                        android:layout_marginTop="34dp"
                        android:gravity="end"
                        >

                    </TextView>



                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:id="@+id/bookDetailThumbNailView"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="20dp"
                        android:background="#AEAEAE"
                        app:layout_constraintTop_toBottomOf="@+id/bookDetailPublishedDateTV"
                        >
                    </View>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bookDetailThumbNailView"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:id="@+id/bookDetailBookImageTV"
                        android:layout_marginTop="10dp"
                        android:text="@string/book_image"
                        >

                    </TextView>


                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="200dp"
                        app:layout_constraintTop_toBottomOf="@+id/bookDetailThumbNailView"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edge_round"
                        android:id="@+id/bookDetailBookImageView"
                        android:contentDescription="@string/book_image"
                        >

                    </ImageView>





                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:id="@+id/bookDetailDescriptionView"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="10dp"
                        android:background="#AEAEAE"
                        app:layout_constraintTop_toBottomOf="@+id/bookDetailBookImageView"
                        >
                    </View>



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bookDetailDescriptionView"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:id="@+id/bookDetailDescription"
                        android:layout_marginTop="10dp"
                        android:text="@string/description"
                        >

                    </TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/bookDetailDescription"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:layout_marginTop="20dp"
                        android:lineSpacingExtra="10dp"
                        android:paddingBottom="30dp"
                        android:id="@+id/bookDetailDescriptionTV"
                        >

                    </TextView>




                </androidx.constraintlayout.widget.ConstraintLayout>





            </androidx.core.widget.NestedScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>